--- a/templates/login.html
+++ b/templates/login.html
@@ -4,19 +4,24 @@
 <h2><span>Log In</span></h2>
     <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
+        <h4>
+          {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                <ul>
+                    {% for message in messages %}
+                    <li><span style="color: red;">{{ message }}</span></li>
+                    {% endfor %}
+                </ul>
+                {% endif %}
+            {% endwith %}
+        </h4>
         <p>
             {{ form.username.label }}<br>
             {{ form.username(size=32) }}<br>
-            {% for error in form.username.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
         </p>
         <p>
             {{ form.password.label }}<br>
             {{ form.password(size=32) }}<br>
-            {% for error in form.password.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
         </p>
         <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
         <p>{{ form.submit() }}</p>
