--- a/templates/updateemail.html
+++ b/templates/updateemail.html
@@ -1,13 +1,28 @@
 {% extends 'layout.html' %}
 {% block content %}
 <h2><span>Update Email</span></h2>
+<h4>
+  {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <ul>
+            {% for message in messages %}
+            <li><span style="color: red;">{{ message }}</span></li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+    {% endwith %}
+</h4>
 <form class="" method="post">
   {{emailform.hidden_tag()}}
   <p>
   {{emailform.currentemail.label}}<br>
   {{emailform.currentemail(size=64)}}<br>
+  </p>
+  <p>
   {{emailform.password.label}}<br>
   {{emailform.password(size=64)}}<br>
+  </p>
+  <p>
   {{emailform.email.label}}<br>
   {{emailform.email(size=64)}}<br>
   {{emailform.submit()}}
