changed name of tracking table and user page only uses one query now

--- a/templates/user.html
+++ b/templates/user.html
@@ -5,11 +5,11 @@
 <div class="row">
   <div class="halfsplit">
     <h3>Comments</h3>
-    {% for c in comments %}
+    {% for c in user.comments %}
     <p><a href="/pow/{{c.powid}}">{{c.comment}} on {{c.Prisoner.Rank.initial}}. {{c.Prisoner.surname}}'s page</a></p>
     {% endfor %}
     <h3>Tracked Prisoners</h3>
-    {% for t in tracked %}
+    {% for t in user.followers %}
       <p><a href="/pow/{{t.Prisoner.id}}">{{t.Prisoner.Rank.initial}}. {{t.Prisoner.surname}}</a></p>
       <p><a href="/deltrack/{{t.Prisoner.id}}">Remove from tracking list?</a></p>
     {% endfor %}
