made sure query and count was displaying on all results pages

--- a/templates/units.html
+++ b/templates/units.html
@@ -1,6 +1,7 @@
 {% extends 'layout.html' %}
 {% block content %}
 <h2><span>Showing Results for {{search}}</span></h2>
+<p>Displaying {{count}} Results.</p>
 <div class="row">
   <div class="coloum">
     {% for r in u1 %}
