optimising the queries for the POW page

--- a/templates/prisoner.html
+++ b/templates/prisoner.html
@@ -75,7 +75,7 @@
   </div>
 <div class="halfsplit">
   <table>
-  {% for c in comments %}
+  {% for c in prisoner.comments %}
     <tr>
       <p>{{c.User.username}}:
         <br>{{c.comment}}</p>
