--- a/templates/prisoner.html
+++ b/templates/prisoner.html
@@ -3,26 +3,35 @@
 <h2><span>{{ prisoner.Rank.initial }}. {{ prisoner.surname }}</span></h2>
 <div class="row">
   <div class="powphoto">
-    <table
+    <table>
     <tr>
-      <td>{% if prisoner.photo is not none %}<img src="{{prisoner.photo}}"
+      <td>
+        {% if prisoner.photo is not none %}
+        <img src="{{prisoner.photo}}"
         alt="{{prisoner.Rank.name}} {{prisoner.initial}}. {{prisoner.surname}} - Photo">
-        {% else %} <img src="{{prisoner.units.unit.photo}}" alt="{{prisoner.units.unit.name}} - Photo">{% endif %}</td>
+        {% else %}
+        <img src="{{prisoner.units.unit.photo}}" alt="{{prisoner.units.unit.name}} - Photo">{% endif %}</td>
     </tr>
+
     <tr>
       <td>Service Number: {{prisoner.service_number}}</td>
     </tr>
+
+    <tr>
+      <td><a href="/rank/{{prisoner.Rank.id}}">Rank: {{prisoner.Rank.name}}</a></td>
+    </tr>
+
       <tr>
-        <td><a href="/rank/{{prisoner.Rank.id}}">Rank: {{prisoner.Rank.name}}</a></td>
-      </tr>
-      <tr>
+        <!-- Loops through each Unit attached to the POW, and links them seperately-->
         <td>Unit:{% for u in prisoner.units %}<a href="/unit/{{u.unit.id}}"> {{u.unit.name}}</a>{% endfor %}</td>
       </tr>
+
       <tr>
         <td><a href="/capture/{{prisoner.Capture.id}}">Capture: {{prisoner.Capture.date}}</a></td>
       </tr>
     </table>
   </div>
+
   <div class="powtext">
     <p>{{prisoner.Rank.name}} {% if prisoner.first_names is not none %}{{prisoner.first_names}}{% else %}{{prisoner.initial}}{% endif %} {{prisoner.surname}} served in the
       {% for u in prisoner.units %} {{u.unit.fullname}} {% endfor %} in the Second New Zealand
@@ -30,6 +39,7 @@
       captured along with {{count}} other soldiers {{sent}}.<br></p>
   </div>
 </div>
+
 <h3>Rank.</h3>
 <p>{{prisoner.Rank.name}}</p>
 <p>{{prisoner.Rank.desc}}</p>
@@ -46,6 +56,7 @@
 <div class="row">
   <h2><span>Comments</span></h2>
   <div class="halfsplit">
+    <!-- Only displays the Comment ability if the user is logged in-->
     {% if current_user.is_anonymous %}
     <p>To comment on a Prisoner's profile you need to login in.
       <a href="/login">Click Here to Login!</a>
@@ -63,6 +74,7 @@
     </form>
     {% endif %}
     <h3>Track Prisoner</h3>
+    <!--Only displays the tracking option if the user is logged in and not tracking already -->
     {% if current_user.is_anonymous %}
       <p>To track a prisoner you need to login. <a href="/login">Click here to login!</a></p>
     {% elif tracked is not none %}
@@ -70,11 +82,13 @@
       <p><a href="/deltrack/{{prisoner.id}}">Click here to stop tracking!</a></p>
     {% else %}
     <p>If you would like to get notified when someone comments on this prisoner's
-      page, <a href="/track/{{prisoner.id}}/{{current_user.id}}">select to track this prisoner</a>!</p>
+      page, <a href="/track/{{prisoner.id}}/{{current_user.id}}">select to track this prisoner!</a></p>
     {% endif %}
   </div>
+
 <div class="halfsplit">
   <table>
+  <!--Loops through all associated comments-->
   {% for c in prisoner.comments %}
     <tr>
       <p>{{c.User.username}}:
@@ -87,4 +101,5 @@
   </table>
 </div>
 </div>
+
 {% endblock %}
