forced the comments div below the POW info.

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,7 +13,9 @@
       {% include 'nav.html' %}
       {% include 'header.html' %}
     </header>
+    <div class="wrapper">
     {% block content %} {% endblock %}
+    </div>
     {% include 'footer.html' %}
   </body>
 </html>
