--- a/static/css/style.css
+++ b/static/css/style.css
@@ -105,6 +105,10 @@ p {
 
 /** Div General Styling **/
 
+.wrapper {
+  height: 100%;
+}
+
 .photo {
   width: 70%;
   padding-left: 15%;
@@ -119,11 +123,19 @@ p {
   width: 100%;
   padding-top: 20px;
   display: inline;
+  height: 100%;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
 }
 
 .row h2 span {
   padding-top: 15px;
 }
+
 
 .row p {
   padding-left: 10%;
@@ -177,10 +189,23 @@ p {
 
 .halfsplit p {
   text-align: left;
+  padding-left: 20px;
 }
 
-.halfsplit input[type=text] {
-  padding: 15px;
+.powphoto {
+  width: 30%;
+  float: left;
+  height: 100%;
+}
+
+.powtext {
+  width: 70%;
+  float: left;
+  height: 100%;
+}
+
+.powtext p {
+  padding: 20px;
 }
 
 /** About Page Styling **/
@@ -214,20 +239,4 @@ p {
   color: #D9B68C;
   padding-top: 30px;
   font-size: 20px;
-}
-
-/** POW Page **/
-.powphoto {
-  padding-top: 20;
-  width: 25%;
-  float: left;
-}
-
-.powtext {
-  width: 75%;
-  float: left;
-}
-
-.powtext p {
-  padding: 20px;
 }
