--- a/templates/footer.html
+++ b/templates/footer.html
@@ -7,7 +7,7 @@
     <div class="halfsplit">
       {{contactform.hidden_tag()}}
       <p>{{contactform.name.label}}<br>
-      {{contactform.name(size=32)}}<br>
+      {{contactform.name(size=32)}}<br><br>
       {{contactform.email.label}}<br>
       {{contactform.email(size=64)}}<br>
     </div>
