--- a/templates/user.html
+++ b/templates/user.html
@@ -17,13 +17,7 @@
     {% endfor %}
   </div>
   <div class="halfsplit">
-    <h3>Account Details</h3>
-    <p>Username: {{current_user.username}}
-    <br>
-    Email: {{current_user.email}}
-    </p>
-    <br>
-    <br>
+    <h3>Update Account Details</h3>
     <a href='/update_password'>Change Password</a>
     <br>
     <br>
