using auto column count

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -105,6 +105,14 @@ p {
 
 /** Div General Styling **/
 
+.auto-columns {
+  column-count: 4;
+}
+
+.item {
+  padding-right: 20px;
+}
+
 .wrapper {
   height: 100%;
 }
