stop double submission of form

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,6 +4,8 @@
   <head>
     <title>New Zealand Prisoner of War Records</title>
     <link rel="stylesheet" href="/static/css/style.css">
+    <script src="/static/js/jquery-3.5.1.min.js"></script>
+    <script src="/static/js/double_submission.js"></script>
     <!-- Importing font from Google Fonts-->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Raleway&display=swap" rel="stylesheet">
   </head>
