fixed variable names

--- a/templates/about.html
+++ b/templates/about.html
@@ -42,10 +42,9 @@
       Private Monaghan survived but sustained injuries to his leg and hip. He was taken to a Greek Hospital
       before being transported to Campo 57 - Grupignano. He remained here till Italy's capitulation in September
       of 1943, he remained at the camp and so was taken by the German's and transported to a German Prisoner of War
-      camp. ** CAMP MOVING **. As the German's were losing ground in early 1945, the decision was made to march the
+      camp. He was originally in Gorlitz, before moving to Stalag VIII-B. In early 1945 as Nazi Germany was losing the war and so the decision was made to march the
       Prisoners away from the Soviets who were invading from the East. From Stalag VIII-B, the prisoners marched
-      across Germany in the winter to **LOCATION** where they were liberated by the Americans on the
-      **DATE**.
+      across Germany in the winter to Stalag VII-A where they were liberated by the Americans on the 29th of April.
       <br><br>
       His experience was not unique to him, countless other men experienced the cruel treatment of being a
       prisoner of war. This website aims to help aid people in searching for family who had served and
